--- a/todolist.html
+++ b/todolist.html
@@ -14,17 +14,34 @@
             <h2>To-Do List <img src="icon.png" ></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="add your text">
-                <button>add</button>
+                <button id="button" onclick="addTask()">add</button>
             </div>
-            <ul ıd="list-container">
-                <li class="checked">Task 1</li>
+            <ul id="list-container">
+                <!-- <li class="checked">Task 1</li>
                 <li>Task 2</li>
-                <li>Task 3</li>
+                <li>Task 3</li> -->
 
             </ul>
         </div>
     </div>
     <script>
+         const inputBox = document.getElementById("input-box")
+        const listContainer = document.getElementById("list-container")
+       
+        
+        function addTask(){
+          if(inputBox.value=== '') {
+            alert("Write something")
+          } else {
+            let li = document.createElement("li");
+            li.innerHTML = inputBox.value;
+            listContainer.appendChild(li);
+            inputBox.value = '';
+          }
+
+        }
+
+
 
     </script>
 </body>
