--- a/todolist.html
+++ b/todolist.html
@@ -36,8 +36,12 @@
             let li = document.createElement("li");
             li.innerHTML = inputBox.value;
             listContainer.appendChild(li);
-            inputBox.value = '';
+            let span = document.createElement("span")
+            span.innerHTML = "\u00d7";
+            li.appendChild(span);
+            
           }
+          inputBox.value = '';
 
         }
 
